k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-fe
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: example-fe
