k8s/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-fe
  namespace: default
  annotations:
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: example-fe
          servicePort: 80
